<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/category_menu_no_category"
        android:title="@string/no_category"
        android:icon="@drawable/ic_category"
        />

    <item
        android:id="@+id/category_menu_work"
        android:title="@string/work"
        android:icon="@drawable/ic_category"
        />


    <item
        android:id="@+id/category_menu_study"
        android:title="@string/study"
        android:icon="@drawable/ic_category"
        />

    <item
        android:id="@+id/category_menu_home"
        android:title="@string/home"
        android:icon="@drawable/ic_category"
        />

    <item
        android:id="@+id/category_menu_add_category"
        android:title="@string/add_category"
        android:icon="@drawable/ic_add_category"
        />

</menu>