<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/navigation_list">

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.example.notes.FavoritesFragment"
        android:label="@string/bottom_nav_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_list"
        android:name="com.example.notes.NotesFragment"
        android:label="@string/bottom_nav_list"
        tools:layout="@layout/fragment_notes" />
    <fragment
        android:id="@+id/navigation_add"
        android:name="com.example.notes.AddFragment"
        android:label="@string/bottom_nav_add"
        tools:layout="@layout/fragment_add" />
    <fragment
        android:id="@+id/navigation_tasks"
        android:name="com.example.notes.TasksFragment"
        android:label="@string/bottom_nav_tasks"
        tools:layout="@layout/fragment_tasks" />
</navigation>