<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/fragment_one_note_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".OneNoteFragment">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/title_edit_text"
        style="@style/field_title" />

    <TextView
        android:id="@+id/creation_date_text_view"
        style="@style/field_default"
        android:hint="@string/creation_date_hint"/>

    <EditText
        android:id="@+id/category_edit_text"
        style="@style/field_default"
        android:hint="@string/category" />

    <CheckBox
        android:id="@+id/is_favorite_checkbox"
        style="@style/field_default"
        android:text="@string/favorite" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/description_edit_text"
        style="@style/field_default"
        android:hint="@string/description_hint"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/note_edit_text"
        style="@style/field_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_save"
        style="@style/style_button_save_note">
    </com.google.android.material.button.MaterialButton>
</LinearLayout>